--- a/src/components/Microsoft.DotNet.UpgradeAssistant.Analysis/Microsoft.DotNet.UpgradeAssistant.Analysis.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant.Analysis/Microsoft.DotNet.UpgradeAssistant.Analysis.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Packages\Microsoft.DotNet.UpgradeAssistant.Steps.Packages.csproj" />
+    <ProjectReference Include="..\..\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Solution\Microsoft.DotNet.UpgradeAssistant.Steps.Solution.csproj" />
   </ItemGroup>
 
 </Project>
