Add a codefixer to refactor HttpContext.Current (#536)
This adds an additional codefixe for HttpContext.Current that helps to
refactor its usage to instead use method injection. The codefixe will
update calling methods to pass in HttpContext.Current, which can be
called multiple times to move HttpContext.Current up the stack.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -25,6 +25,10 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit" Version="1.0.1-beta1.21265.1" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit" Version="1.0.1-beta1.21265.1" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic.Analyzer.Testing.XUnit" Version="1.0.1-beta1.21265.1" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing.XUnit" Version="1.0.1-beta1.21265.1" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
