Copy extensions to separate folder

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -28,4 +28,6 @@
     <PackageReference Include="Microsoft.Build.Framework" ExcludeAssets="runtime" />
   </ItemGroup>
 
+  <Import Project="$(MSBuildThisFileDirectory)/Extensions.targets" />
+
 </Project>
