--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -1,33 +1,17 @@
 ﻿{
-  "ConfigUpdater": {
-    "ConfigFilePaths": [
-      "app.config",
-      "web.config",
-      "Views\\web.config"
-    ]
-  },
-  "PackageUpdater": {
-    "PackageMapPath": "PackageMaps"
-  },
-  "TemplateInserter": {
-    "TemplateConfigFiles": [
-      "Templates\\CSharpWebAppTemplates\\WebAppTemplates.json",
-      "Templates\\VisualBasicWebAppTemplates\\WebAppTemplates.json"
-    ]
-  },
   "DefaultTargetFrameworks": {
     "Current": "net5.0",
     "LTS": "netcoreapp3.1",
     "Preview": "net6.0"
   },
+
   "TryConvertProjectConverter": {
     "TryConvertPath": "./tools/try-convert.exe"
   },
+
   "UpgradeAssistantExtensionPaths": "",
-  "Portability": {
-    "ServiceEndpoint": "https://portability.dot.net"
-  },
-  "ExtensionServiceProviders": [
-    "Microsoft.DotNet.UpgradeAssistant.Extensions.Default.dll"
+
+  "DefaultExtensions": [
+    "Default"
   ]
 }
