--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Source/Microsoft.DotNet.UpgradeAssistant.Steps.Source.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Source/Microsoft.DotNet.UpgradeAssistant.Steps.Source.csproj
@@ -9,6 +9,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all" />
   </ItemGroup>
 </Project>
