--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
@@ -9,6 +9,11 @@
     ]
   },
 
+  "TryConvertProjectConverter": {
+    "TryConvertPath": "./tools/try-convert.exe"
+  },
+
+
   "PackageUpdater": {
     "PackageMapPath": "PackageMaps"
   },
