Load type mappings via extension options in addition to DI registrations

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -15,6 +15,11 @@
       "Templates\\VisualBasicWebAppTemplates\\WebAppTemplates.json"
     ]
   },
+  "SourceUpdater": {
+    "AdditionalAnalyzerTexts": [
+      "WebTypeReplacements.typemap"
+    ]
+  },
   "DefaultTargetFrameworks": {
     "Current": "net5.0",
     "LTS": "netcoreapp3.1",
