--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
@@ -10,7 +10,7 @@
   },
 
   "TryConvertProjectConverter": {
-    "TryConvertPath": "./tools/try-convert.exe"
+    "TryConvertPath": "./try-convert/try-convert.dll"
   },
 
 
