--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <InstallTryConvert>true</InstallTryConvert>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
