--- a/TryConvertInstaller.targets
+++ b/TryConvertInstaller.targets
@@ -10,13 +10,14 @@
       <NoDefaultExcludes>true</NoDefaultExcludes>
       <ToolsDirectory>$(MSBuildThisFileDirectory).tools\</ToolsDirectory>
       <TryConvertVersion>0.7.226301</TryConvertVersion>
-      <TryConvertDirectory>$(ToolsDirectory)try-convert\$(TryConvertVersion)\.store\try-convert\$(TryConvertVersion)\try-convert\$(TryConvertVersion)\tools\net5.0\any</TryConvertDirectory>
+      <TryConvertDirectory>$(ToolsDirectory)try-convert\$(TryConvertVersion)</TryConvertDirectory>
+      <TryConvertSubDirectory>$(ToolsDirectory)try-convert\$(TryConvertVersion)\.store\try-convert\$(TryConvertVersion)\try-convert\$(TryConvertVersion)\tools\net5.0\any</TryConvertSubDirectory>
     </PropertyGroup>
 
     <Exec Command="dotnet tool install try-convert --version $(TryConvertVersion) --tool-path $(TryConvertDirectory)" Condition="!Exists($(TryConvertDirectory))" />
 
     <ItemGroup>
-      <__TryConvertContents Include="$(TryConvertDirectory)\**\*" />
+      <__TryConvertContents Include="$(TryConvertSubDirectory)\**\*" />
       <None Include="@(__TryConvertContents)">
         <Link>try-convert/%(RecursiveDir)%(Filename)%(Extension)</Link>
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
