--- a/Extensions.targets
+++ b/Extensions.targets
@@ -20,9 +20,8 @@
   </Target>
 
   <!-- Since we will be publishing extensions, we want to ensure they are restored -->
-  <Target Name="RestoreExtensions" BeforeTargets="Restore;PrepareForBuild;Pack">
-    <MSBuild Projects="%(Extension.Identity)" Targets="Restore" Properties="Configuration=$(Configuration)" Condition=" '%(Extension.Name)' != '' ">
-    </MSBuild>
+  <Target Name="RestoreExtensions" BeforeTargets="Restore;PrepareForBuild;$(PackDependsOn)">
+    <MSBuild Projects="%(Extension.Identity)" Targets="Restore" Properties="Configuration=$(Configuration)" Condition=" '%(Extension.Name)' != '' " />
   </Target>
 
   <!-- Publish each extension into its own directory -->
