Consolidate type upgrade analyzers into a single configurable analyzer (#540)
This consolidates all the analyzers derived from `IdentifierUpgradeAnalyzer` and replaces them with a single analyzer/code fix provider for identifying and updating all cases where a type name needs replaced with a more modern equivalent.

It also updates this new `TypeUpgradeAnalyzer` to read the types to be replaced dynamically from additional texts so that users can easily extend the mapping of types to be replaced (by including a .typemap file in their project, including a .typemap additional file in their extension, or by registering an `AdditionalText` file with in UA's DI container).

--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Package/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Package.csproj
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Package/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Package.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
+    <None Update="build\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.props" CopyToOutputDirectory="Always" Pack="true" PackagePath="" />
   </ItemGroup>
   <Target Name="_AddAnalyzersToOutput">
     <ItemGroup>
@@ -36,6 +37,8 @@
       <TfmSpecificPackageFile Include="$(OutputPath)\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.Common.dll" PackagePath="analyzers/dotnet/vb" />
       <TfmSpecificPackageFile Include="$(OutputPath)\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.dll" PackagePath="analyzers/dotnet/vb" />
       <TfmSpecificPackageFile Include="$(OutputPath)\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes.dll" PackagePath="analyzers/dotnet/vb" />
+      <TfmSpecificPackageFile Include="$(OutputPath)\TypeMaps.props" PackagePath="build" />
+      <TfmSpecificPackageFile Include="$(OutputPath)\WebTypeReplacements.typemap" PackagePath="build" />
     </ItemGroup>
   </Target>
 </Project>
