Move source updater

--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default/ExtensionManifest.json
@@ -12,7 +12,12 @@
   "TryConvertProjectConverter": {
     "TryConvertPath": "./try-convert/try-convert.dll"
   },
-
+  
+  "SourceUpdater": {
+    "AdditionalAnalyzerTexts": [
+      "WebTypeReplacements.typemap"
+    ]
+  },
 
   "PackageUpdater": {
     "PackageMapPath": "PackageMaps"
