--- a/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.csproj
+++ b/src/extensions/default/analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="TypeMaps.props" CopyToOutputDirectory="Always" />
-    <None Include="WebTypeReplacements.typemap" CopyToOutputDirectory="Always" />
+    <None Include="WebTypeReplacements.typemap" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" />
