Use assembly load context for extensions (#558)
If an extension contains multiple assemblies, they will now resolve from within the extension thanks to a private load context. We want to ensure that we don't load a different version of anything the default context loads, so this checks for that as well.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -13,19 +13,15 @@
     <Compile Include="$(MSBuildThisFileDirectory)/shared/**/*.cs" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <ExcludeMSBuildRuntime Condition=" '$(ExcludeMSBuildRuntime)' =='' ">false</ExcludeMSBuildRuntime>
-  </PropertyGroup>
-
-  <!-- This forces the MSBuild runtime assets to be excluded from build. We have this opt-in because
-       otherwise it will add these as dependencies to all projects. -->
-  <ItemGroup Condition="$(ExcludeMSBuildRuntime)">
+  <ItemGroup>
     <!-- Exclude MSBuild runtime assets from both src and test projects
          as they shouldn't be present in this solution's output paths.
          Instead, these dependencies should be loaded from the selected
          MSBuild's location. -->
-    <PackageReference Include="Microsoft.Build" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.Build.Framework" ExcludeAssets="runtime" />
+    <PackageReference Update="Microsoft.Build" ExcludeAssets="runtime" />
+    <PackageReference Update="Microsoft.Build.Framework" ExcludeAssets="runtime" />
   </ItemGroup>
+
+  <Import Project="$(MSBuildThisFileDirectory)/Extensions.targets" />
 
 </Project>
