--- a/TryConvertInstaller.targets
+++ b/TryConvertInstaller.targets
@@ -4,25 +4,24 @@
   </PropertyGroup>
 
   <Target Name="RestoreAndCopyTryConvert" BeforeTargets="AssignTargetPaths" Condition="$(InstallTryConvert)">
-
     <PropertyGroup>
       <!-- By default, NuGet will not include files starting with '.' or ending with '.nupkg'. Since we are including try-convert via dotnet tools, some of the files fit into this. -->
       <NoDefaultExcludes>true</NoDefaultExcludes>
       <ToolsDirectory>$(MSBuildThisFileDirectory).tools\</ToolsDirectory>
       <TryConvertVersion>0.7.226301</TryConvertVersion>
-      <TryConvertDirectory>$(ToolsDirectory)try-convert\$(TryConvertVersion)\</TryConvertDirectory>
+      <TryConvertDirectory>$(ToolsDirectory)try-convert\$(TryConvertVersion)</TryConvertDirectory>
+      <TryConvertSubDirectory>$(ToolsDirectory)try-convert\$(TryConvertVersion)\.store\try-convert\$(TryConvertVersion)\try-convert\$(TryConvertVersion)\tools\net5.0\any</TryConvertSubDirectory>
     </PropertyGroup>
 
     <Exec Command="dotnet tool install try-convert --version $(TryConvertVersion) --tool-path $(TryConvertDirectory)" Condition="!Exists($(TryConvertDirectory))" />
 
     <ItemGroup>
-      <__TryConvertContents Include="$(TryConvertDirectory)\**\*" />
+      <__TryConvertContents Include="$(TryConvertSubDirectory)\**\*" />
       <None Include="@(__TryConvertContents)">
-        <Link>tools/%(RecursiveDir)%(Filename)%(Extension)</Link>
+        <Link>try-convert/%(RecursiveDir)%(Filename)%(Extension)</Link>
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
-
   </Target>
 
 </Project>
