--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat/Microsoft.DotNet.UpgradeAssistant.Steps.ProjectFormat.csproj
@@ -1,15 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <InstallTryConvert>true</InstallTryConvert>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
-    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
   </ItemGroup>
 </Project>
