--- a/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
+++ b/tests/Microsoft.DotNet.UpgradeAssistant.TestHelpers/Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj
@@ -4,7 +4,9 @@
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac.Extras.Moq" />
+    <PackageReference Include="Autofac.Extras.Moq">
+      <Version>6.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
