--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -12,24 +11,37 @@
     <PackageReleaseNotes>A changelog is available at https://github.com/dotnet/upgrade-assistant/blob/main/CHANGELOG.md.</PackageReleaseNotes>
     <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Autofac" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" />
-    <PackageReference Include="Serilog" />
-    <PackageReference Include="Serilog.Extensions.Hosting" />
-    <PackageReference Include="Serilog.Sinks.Console" />
-    <PackageReference Include="Serilog.Sinks.File" />
-    <PackageReference Include="System.CommandLine" />
+    <PackageReference Include="Autofac">
+      <Version>6.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection">
+      <Version>7.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting">
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog">
+      <Version>2.10.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Extensions.Hosting">
+      <Version>3.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.Console">
+      <Version>3.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Serilog.Sinks.File">
+      <Version>4.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.CommandLine">
+      <Version>2.0.0-beta1.21216.1</Version>
+    </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
     <!-- Explicitly reference packages that we do *not* want included in output
          paths in case transitive dependencies pull them in. These runtime
@@ -41,28 +53,43 @@
          Directory.Build.Targets because tests can use these NuGet packages (and
          the test harness needs to). However, no project (this one or tests) should
          use MSBuild runtime assets. -->
-    <PackageReference Include="NuGet.Common" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Configuration" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.DependencyResolver.Core" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Frameworks" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.LibraryModel" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Packaging" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.ProjectModel" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Protocol" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Versioning" ExcludeAssets="runtime" />
+    <PackageReference Include="NuGet.Common" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Configuration" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.DependencyResolver.Core" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Frameworks" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.LibraryModel" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Packaging" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.ProjectModel" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Protocol" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Versioning" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
     <ProjectReference Include="..\..\components\Microsoft.DotNet.UpgradeAssistant\Microsoft.DotNet.UpgradeAssistant.csproj" />
     <ProjectReference Include="..\..\components\Microsoft.DotNet.UpgradeAssistant.MSBuild\Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj" />
     <ProjectReference Include="..\..\components\Microsoft.DotNet.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
-
   <ItemGroup>
-    <Extension Include="..\..\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.csproj" >
+    <Extension Include="..\..\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.csproj">
       <Name>Default</Name>
     </Extension>
   </ItemGroup>
-
 </Project>
