--- a/src/components/Microsoft.DotNet.UpgradeAssistant.MSBuild/Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant.MSBuild/Microsoft.DotNet.UpgradeAssistant.MSBuild.csproj
@@ -3,18 +3,37 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.ProjectModel" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Frameworks" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Configuration" ExcludeAssets="runtime" />
-    <PackageReference Include="NuGet.Credentials" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.Build.Locator" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
-    <PackageReference Include="Microsoft.Extensions.Options" />
-    <PackageReference Include="Microsoft.CodeAnalysis" />
+    <PackageReference Include="Microsoft.Build" ExcludeAssets="runtime">
+      <Version>16.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.ProjectModel" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Frameworks" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Configuration" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="NuGet.Credentials" ExcludeAssets="runtime">
+      <Version>5.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Build.Locator">
+      <Version>1.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild">
+      <Version>3.9.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options">
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis">
+      <Version>3.9.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Setup.Configuration.Interop">
       <!-- This package is mostly COM definitions which can be loaded in .NET 5 runtime just fine -->
       <NoWarn>NU1701</NoWarn>
+      <Version>2.3.2262-g94fae01e</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
