--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration/Microsoft.DotNet.UpgradeAssistant.Steps.Configuration.csproj
@@ -7,6 +7,8 @@
     <ProjectReference Include="..\..\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
+      <Version>5.0.0</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
