--- a/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Source/Microsoft.DotNet.UpgradeAssistant.Steps.Source.csproj
+++ b/src/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Source/Microsoft.DotNet.UpgradeAssistant.Steps.Source.csproj
@@ -8,7 +8,11 @@
     <ProjectReference Include="..\..\extensions\default\analyzers\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.CodeFixes.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" PrivateAssets="all">
+      <Version>3.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" PrivateAssets="all">
+      <Version>3.9.0</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
