--- a/tests/Directory.Build.targets
+++ b/tests/Directory.Build.targets
@@ -1,7 +1,7 @@
 <Project>
 
   <ItemGroup>
-    <PackageReference Include="Autofixture" />
+    <PackageReference Include="Autofixture" Version="4.15.0" />
   </ItemGroup>
 
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.targets', '$(MSBuildThisFileDirectory)../'))" />
