--- a/tests/common/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests.csproj
+++ b/tests/common/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests/Microsoft.DotNet.UpgradeAssistant.Abstractions.Tests.csproj
@@ -5,11 +5,16 @@
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Moq" />
-    <PackageReference Include="AutoFixture" />
+    <PackageReference Include="Moq">
+      <Version>4.16.0</Version>
+    </PackageReference>
+    <PackageReference Include="AutoFixture">
+      <Version>4.15.0</Version>
+    </PackageReference>
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <Version>3.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
