--- a/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests.csproj
+++ b/tests/extensions/default/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Default.ConfigUpdaters.Tests.csproj
@@ -4,10 +4,13 @@
     <IsUnitTestProject>true</IsUnitTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac.Extras.Moq" />
+    <PackageReference Include="Autofac.Extras.Moq">
+      <Version>6.0.0</Version>
+    </PackageReference>
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <Version>3.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
