--- a/tests/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests.csproj
+++ b/tests/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Backup.Tests.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <IsTestProject>true</IsTestProject>
@@ -20,11 +19,16 @@
     <None Remove="TestAssets\B\Project1\B.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac.Extras.Moq" />
-    <PackageReference Include="AutoFixture" />
+    <PackageReference Include="Autofac.Extras.Moq">
+      <Version>6.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="AutoFixture">
+      <Version>4.15.0</Version>
+    </PackageReference>
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <Version>3.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -33,5 +37,4 @@
     <ProjectReference Include="..\..\..\src\cli\Microsoft.DotNet.UpgradeAssistant.Cli\Microsoft.DotNet.UpgradeAssistant.Cli.csproj" />
     <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
-
 </Project>
