--- a/tests/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.Tests.csproj
+++ b/tests/steps/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.Tests/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.Tests.csproj
@@ -8,10 +8,13 @@
     <PackageReference Include="coverlet.collector">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <Version>3.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AutoFixture" />
+    <PackageReference Include="AutoFixture">
+      <Version>4.15.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\steps\Microsoft.DotNet.UpgradeAssistant.Steps.Solution\Microsoft.DotNet.UpgradeAssistant.Steps.Solution.csproj" />
